# googleapis-reproducer

./: BUILD  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
legacy/: BUILD.bazel  main.go
patches/: bazel_gazelle-ignore-known-imports.patch  com_google_googleapis-importpath.patch  io_bazel_rules_go-alias.patch  io_bazel_rules_go-remove-golang-protobuf.patch
proto/: BUILD.bazel  any.pb.go  any.proto  vision.pb.go  vision.proto
v1/: BUILD.bazel  main.go
v2/: BUILD.bazel  main.go
visionv1/: BUILD.bazel
visionv2/: BUILD.bazel  main.go
