load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/wyattanderson/googleapis-reproducer
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
