load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "legacy_lib",
    srcs = ["main.go"],
    importpath = "github.com/wyattanderson/googleapis-reproducer/legacy",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_golang_protobuf//jsonpb",
        "@com_github_golang_protobuf//ptypes",
        "@com_github_golang_protobuf//ptypes/any",
        "@com_github_golang_protobuf//ptypes/wrappers",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_binary(
    name = "legacy",
    embed = [":legacy_lib"],
    visibility = ["//visibility:public"],
)
