# gazelle:resolve proto google/cloud/vision/v1/geometry.proto @com_google_googleapis//google/cloud/vision/v1:vision_proto
# gazelle:resolve proto go google/cloud/vision/v1/geometry.proto @org_golang_google_genproto//googleapis/cloud/vision/v1:go_default_library
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_bazel_lib//lib:output_files.bzl", "make_output_files")

proto_library(
    name = "proto_proto",
    srcs = ["vision.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_googleapis//google/cloud/vision/v1:vision_proto"],
)

go_proto_library(
    name = "proto_go_proto",
    importpath = "github.com/wyattanderson/googleapis-reproducer/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_genproto//googleapis/cloud/vision/v1:go_default_library"],
)

go_library(
    name = "proto",
    embed = [":proto_go_proto"],
    importpath = "github.com/wyattanderson/googleapis-reproducer/proto",
    visibility = ["//visibility:public"],
)

write_source_files(
    name = "write_files",
    files = {
        "vision.pb.go": make_output_files(
            "vision_pb_go",
            ":proto_go_proto",
            ["proto/proto_go_proto_/github.com/wyattanderson/googleapis-reproducer/proto/vision.pb.go"],
            output_group = "go_generated_srcs",
        ),
    },
)
