load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "googleapis-reproducer",
    srcs = ["main.go"],
    importpath = "github.com/wyattanderson/googleapis-reproducer/v2",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_vision_v2//apiv1",
        "@com_google_cloud_go_vision_v2//apiv1/visionpb",
    ],
)
