load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "visionv1_lib",
    srcs = ["main.go"],
    importpath = "github.com/wyattanderson/googleapis-reproducer/visionv1",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_google_cloud_go_vision//apiv1",
        "@org_golang_google_genproto//googleapis/cloud/vision/v1:vision",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "visionv1",
    embed = [":visionv1_lib"],
    visibility = ["//visibility:public"],
)
