load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "visionv2_lib",
    srcs = ["main.go"],
    importpath = "github.com/wyattanderson/googleapis-reproducer/visionv2",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_google_cloud_go_vision_v2//apiv1",
        "@com_google_cloud_go_vision_v2//apiv1/visionpb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)

go_binary(
    name = "visionv2",
    embed = [":visionv2_lib"],
    visibility = ["//visibility:public"],
)
